--- a/web/static/css/wallet.css
+++ b/web/static/css/wallet.css
@@ -1,3 +1,5 @@
+@import url(general.css);
+
 html{
     height: 100%;
     box-sizing: border-box;
@@ -60,6 +62,29 @@ body{
     display: flex;
     align-items: center;
     gap: 10px;
+}
+
+/* Avatar similar a home */
+.profile-image-preview {
+  width: 72px;
+  height: 72px;
+  border-radius: 50%;
+  border: 3px solid #a26127;
+  background-color: #f0f0f0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  font-size: 2.2em;
+  color: #a26127;
+  flex-shrink: 0;
+}
+#walletProfileImage {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+  display: none;
 }
 div.contenedor-padre{
     background: linear-gradient(#606c3886, #90b067);
